Adding new html document with life of pi movie

--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -102,9 +102,9 @@
     </div>
     <div class="container">
       
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="ZZv1vki4ou4" data-toggle="modal" data-target="#trailer">
-    <img src="http://www.impawards.com/1995/posters/toy_story_ver1_xxlg.jpg" width="220" height="342">
-    <h2>Toy Story</h2>
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="5GbXVo9DdZo" data-toggle="modal" data-target="#trailer">
+    <img src="http://kidspiritonline.com/files/2012/11/life-of-pi-poster.jpg" width="220" height="342">
+    <h2>Life of Pi</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="5PSNL1qE6VY" data-toggle="modal" data-target="#trailer">
